# CarlaBridge

./: .gitignore  CLAUDE.md  Carla.code-workspace  README.md  agent_socket_sniffer.py  bridge-agent-protocol-v1.md  design-refactor-agent-boundary.md  design.md  pyproject.toml  run.ps1  run.py  spec.md  tasks-refactor.md  tasks.md  test_agent.py
.claude/: settings.local.json
carlabridge/: __init__.py  config.py  main.py
carlabridge/agent/: link.py  mock_agent.py  socketio_agent.py
carlabridge/bus/: agent_ns.py  broadcaster.py  envelope.py  frontend_ns.py  projector.py  routes_scenario.py  server.py
carlabridge/commands/: bus.py  dispatcher.py  enum.py
carlabridge/core/: atomic.py  clock.py  fleet.py  incident.py  snapshot.py  tick_loop.py  world.py
carlabridge/obs/: event_log.py  host_sampler.py  metrics.py
carlabridge/scenarios/: __init__.py  base.py  in_flight.py  runner.py  s1_fire.py  waypoint_follower.py
carlabridge/sensors/: camera.py  frame_queue.py
carlabridge/streaming/: jpeg_tap.py  mjpeg.py  webrtc.py
config/: default.toml
docs/archive/: README.md  design-refactor-agent-boundary.md  design-v0.1.md  spec-v0.1.md  tasks-m0-m8.md  tasks-refactor-r1-r11.md
scripts/: design_poses.py  nf5_memory_probe.ps1  png_to_mp4.ps1  restart_smoke.ps1
tests/: spawn_config.py  test_agent_command_rpc.py  test_agent_link.py  test_atomic.py  test_broadcast.py  test_broadcaster.py  test_camera_manager.py  test_camera_track.py  test_clock.py  test_command_lifecycle.py  test_commands.py  test_commands_bus.py  test_config.py  test_dispatcher_v2.py  test_enum_v2.py  test_envelope.py  test_event_broadcast.py  test_fleet.py  test_frame_queue.py  test_healthz.py  test_host_sampler.py  test_ignite_fire.py  test_instant_commands.py  test_mjpeg.py  test_nf6_backpressure.py  test_no_timed_events.py  test_obs.py  test_patrol_loop.py  test_projector.py  test_reset_cancel_chain.py  test_reset_reinit.py  test_routes_scenario.py  test_run_in_sim_domain.py  test_s1_command.py  test_s1_dispatch.py  test_s1_spawn_fallback.py  test_scenarios.py  test_snapshot.py  test_supersede.py  test_test_agent_smoke.py  (+3 more)
tests/fakes/: fake_world.py
